--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 	</head>
 	<body>
 		<div class="container">
-            <!--<h1>Assignment 5</h1>-->
+            <h1>Assignment 5</h1>
 			<div class="canvas" id="map">
+				<div class="custom-tooltip">
+					<h2 id="type"></h2>
+					<p>Neighbor-Name: <span id="name"></span></p>
+				</div>
 			</div>
 		</div><!--.container-->
 
