--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<div class="canvas" id="map">
 				<div class="custom-tooltip">
 					<h2 id="type"></h2>
-					<p>Neighbor-Name: <span id="name"></span></p>
+					<p>Block-name: <span id="name"></span></p>
+					<p>Family-income: <span id="value"></span></p>
 				</div>
 			</div>
 		</div><!--.container-->
